--- a/views/package.json
+++ b/views/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^4.5.2",
     "dotenv": "^8.2.0",
+    "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "require": "^2.4.20"
   }
